# OFDM-Transceiver-Simulator

./: CMakeLists.txt  OFDMSim.cpp  OFDMSim.sln  OFDMSim.vcxproj  OFDMSim.vcxproj.filters  README.md
examples/: sim_default.ini
include/ofdm/: channel_awgn.hpp  cli.hpp  equalizer.hpp  modulation.hpp  ofdm_engine.hpp  ofdm_frame.hpp  pilots.hpp  self_test.hpp  simulation.hpp  types.hpp
scripts/: plot_ber.py
src/: channel_awgn.cpp  cli.cpp  equalizer.cpp  main.cpp  modulation.cpp  ofdm_engine.cpp  ofdm_frame.cpp  pilots.cpp  self_test.cpp  simulation.cpp
